Fixed vertical align text and input in input-box datepicker

--- a/src/components/Table/styles.styl
+++ b/src/components/Table/styles.styl
@@ -307,7 +307,7 @@
             .input-box 
                 display flex
                 align-items center
-                justify-content center
+                justify-content space-between
                 margin-bottom 1.24rem
                 padding 0.58rem
                 border 1px solid #e6e6e6
@@ -318,20 +318,27 @@
                     background-color transparent
 
                 &__input-label 
-                    font-weight 700
-                    font-size 1rem
+                    font-weight 500
+                    font-size 1.14rem
+
+                .labell-input-wrapper
+                    & .input-wrapper, & &__input-label
+                        display inline-block
+                        vertical-align baseline
+                    
+                    & .input-wrapper
+                        width calc(100% - 6rem)
 
                 &-input 
-                    width calc(100% - 4rem)
                     margin 0 0.4rem
-                    line-height 1
+                    line-height 1rem
                     font-size .8666rem
                     font-weight normal
                     color #8a8a8a
                     background none
                     border none
                     outline none
-                    margin-top 0.4rem
+                    width: 6rem;
 
                 &_grey 
                     background-color #ECEEED
